Setup for testing unit types against eachother